Fix section nav un-collapsing in mobile view bug. (#13595)

--- a/client/my-sites/theme/style.scss
+++ b/client/my-sites/theme/style.scss
@@ -334,10 +334,6 @@
 	animation: loading-fade 1.6s ease-in-out infinite;
 }
 
-.theme__sheet-content .section-nav {
-	height: 50px;
-}
-
 .theme__sheet-features-list {
 	text-align: center;
 	margin: -10px;
